--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>org.myprojectjava</groupId>
     <artifactId>java_project</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/abdelali-elhammadi-nw/java_packaging</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
