--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,11 +2,7 @@ name: My Lib CI/CD
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-  release:
-    types: [ created ]
+    branches: main
 
 jobs:
   build-only:
