--- a/.github/workflows/publish_packages.yml
+++ b/.github/workflows/publish_packages.yml
@@ -3,10 +3,12 @@ on: push
 jobs:
   publish:
     runs-on: ubuntu-latest 
-      working-directory: "project/java_packaging"
     permissions: 
       contents: read
       packages: write 
+    defaults:
+      run:
+       working-directory: "project/java_packaging"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
