--- a/.github/workflows/publish_packages.yml
+++ b/.github/workflows/publish_packages.yml
@@ -8,7 +8,7 @@ jobs:
       packages: write 
     defaults:
       run:
-       working-directory: "project/java_packaging"
+       working-directory: "project"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
