--- a/project/pom.xml
+++ b/project/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.myprojectjava</groupId>
     <artifactId>java_project</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <distributionManagement>
         <repository>
             <id>github</id>
