--- a/project/pom.xml
+++ b/project/pom.xml
@@ -7,11 +7,18 @@
     <groupId>org.myprojectjava</groupId>
     <artifactId>java_project</artifactId>
     <version>4.0.0</version>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>github</id>-->
+<!--            <name>GitHub Apache Maven Packages</name>-->
+<!--            <url>https://maven.pkg.github.com/abdelali4/keycloak</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
+
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/abdelali4/keycloak</url>
+            <id>space-maven</id>
+            <url>https://maven.pkg.jetbrains.space/javapackaging/p/main/maven</url>
         </repository>
     </distributionManagement>
     <properties>
