--- a/.github/workflows/other_repo.yml
+++ b/.github/workflows/other_repo.yml
@@ -15,11 +15,8 @@ jobs:
               cd new_repo
               pwd
               git init
-              git config --global user.name "abdelali4"
-              git config --global user.email "abdelali.elhammadi@gmail.com"
               git config --global credential.helper store
-              git config --global user.password "${{ secrets.ACCOUNT_TOKEN }}"
-              git remote add origin https://github.com/abdelali4/keycloak.git
+              git remote add origin git@github.com:abdelali4/keycloak.git
               git checkout -b main
               git add .
               git commit -m "ha"
