--- a/.github/workflows/other_repo.yml
+++ b/.github/workflows/other_repo.yml
@@ -15,6 +15,8 @@ jobs:
               cd new_repo
               pwd
               git init
+              git config --global user.email "abdelali.el-hammadi@nimbleways.com"
+              git config --global user.name "abdelali-elhammadi-nw"
               git config --global credential.helper store
               git remote add origin git@github.com:abdelali4/keycloak.git
               git checkout -b main
