--- a/.github/workflows/other_repo.yml
+++ b/.github/workflows/other_repo.yml
@@ -23,7 +23,7 @@ jobs:
               git add .
               git commit -m "ha"
               echo "haaa"
-              git push -u origin main
+              git push -u origin main -f
         
       
     
