--- a/.github/workflows/other_repo.yml
+++ b/.github/workflows/other_repo.yml
@@ -24,6 +24,8 @@ jobs:
               git commit -m "ha"
               echo "haaa"
               git push -u origin main -f
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCOUNT_TOKEN }}
         
       
     
