--- a/.github/workflows/other_repo.yml
+++ b/.github/workflows/other_repo.yml
@@ -23,8 +23,13 @@ jobs:
               git commit -m "ha"
               echo "haaa"
               git push -u origin main -f
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCOUNT_TOKEN }}
-        
+              
+      - name: Create Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v2.0.0
+          release_name: Release v2.0.0
+          draft: false
+          prerelease: false
       
     
